# essentialsx

./: Cargo.toml  README.md  build.rs
benches/: matrix_benches.rs
src/: fs.rs  io.rs  lib.rs  main.rs  math.rs
src/io/: mod.rs  repl.rs
src/math/: complex.rs  matrix.rs  mod.rs
