[package]
name = "essentialsx"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "matrix_benches"
harness = false

[features]
default = ["std", "io", "math", "fs"]
fs = ["std"]
io = ["std"]
math = []
std = ["alloc"]
alloc = []
unstable = []
